--- a/Build_a_game/index.html
+++ b/Build_a_game/index.html
@@ -3,15 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Build a game</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <header>
-
+        <nav class="navbar">
+            <ul>
+                <li><a href="" class="Home">Home</a></li>
+                <li><a href="" class="Minesweeper">Minesweeper</a></li>
+                <li><a href="" class="Pokémon_battle_sim">Pokémon battle sim</a></li>
+                <li><a href="" class="op_een_rij">4 op een rij</a></li>
+                <li class="previewpkmn"><img src="./img/pkmnbattlesim.png" width="100" 
+                    height="100"  alt="Pokémon battle sim"></li>
+                <li class="previewmnswp"><img src="./img/pkmnbattlesim.png" width="100" 
+                    height="100"  alt="Pokémon battle sim"></li>
+                <li class="preview4r"><img src="./img/pkmnbattlesim.png" width="100" 
+                    height="100"  alt="Pokémon battle sim"></li>
+            </ul>
+        </nav>
     </header>
     <main>
-
+        <h1 class="title">Build a game project</h1>
     </main>
     <footer>
 
