--- a/Build_a_game/index.html
+++ b/Build_a_game/index.html
@@ -14,12 +14,7 @@
                 <li><a href="" class="Minesweeper">Minesweeper</a></li>
                 <li><a href="" class="Pokémon_battle_sim">Pokémon battle sim</a></li>
                 <li><a href="" class="op_een_rij">4 op een rij</a></li>
-                <li class="previewpkmn"><img src="./img/pkmnbattlesim.png" width="100" 
-                    height="100"  alt="Pokémon battle sim"></li>
-                <li class="previewmnswp"><img src="./img/pkmnbattlesim.png" width="100" 
-                    height="100"  alt="Pokémon battle sim"></li>
-                <li class="preview4r"><img src="./img/pkmnbattlesim.png" width="100" 
-                    height="100"  alt="Pokémon battle sim"></li>
+                <li class="preview"></li>
             </ul>
         </nav>
     </header>
