--- a/Build_a_game/pkmnbattlesim.html
+++ b/Build_a_game/pkmnbattlesim.html
@@ -3,23 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Build a game</title>
+    <title>Pokémon battle sim</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <header>
         <nav class="navbar">
             <ul>
-                <li><a href="index.html" class="Home">> Home</a></li>
+                <li><a href="index.html" class="Home">Home</a></li>
                 <li><a href="minesweeper.html" class="Minesweeper">Minesweeper</a></li>
-                <li><a href="pkmnbattlesim.html" class="Pokémon_battle_sim">Pokémon battle sim</a></li>
+                <li><a href="pkmnbattlesim.html" class="Pokémon_battle_sim">> Pokémon battle sim</a></li>
                 <li><a href="4r.html" class="op_een_rij">4 op een rij</a></li>
                 <li class="preview"></li>
             </ul>
         </nav>
     </header>
     <main>
-        <h1 class="title">Build a game project</h1>
+        <h1 class="title">Pokémon battle sim</h1>
     </main>
     <footer>
 
