pkmn battle sim gamecontainer created + startscreen

--- a/Build_a_game/pkmnbattlesim.html
+++ b/Build_a_game/pkmnbattlesim.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pokémon battle sim</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/pkmnbattlesim.css">
 </head>
 <body>
     <header>
@@ -20,11 +21,16 @@
     </header>
     <main>
         <h1 class="title">Pokémon battle sim</h1>
+        <div class="gamecontainer">
+            <img src="./img/pkmnbattlesim.png" class="containerimg" width="1000" height="700">
+        </div>
+        <button class="startbutton">Start</button>
+        
     </main>
     <footer>
 
         <script src="./js/main.js"></script>
-        <script src="./js/sounds.js"></script>
+        <script src="./js/pkmnbattlesim.js"></script>
     </footer>
 </body>
 </html>
